split table and DBM definition, sepperate vec and ptr implementations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,12 @@
 set(HEADER_FILES
-        dbm/DBM.h)
+        dbm/DBM.h
+        dbm/bounds_table_t.h
+        dbm/bound_t.h)
 add_library(dbm
         ${HEADER_FILES}
-        dbm/DBM.cpp)
+        dbm/DBM.cpp
+        dbm/bounds_table_t.cpp
+        dbm/bound_t.cpp)
 
 install(TARGETS dbm
         RUNTIME DESTINATION bin
