--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(dbm-tests construction_test.cpp)
+add_executable(dbm-tests vector_pointer_test.cpp)
 
 target_link_libraries(dbm-tests dbm)
