add restrict test, set bound to signed integer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ if(BUILD_TESTING AND DBM_BuildTests)
     #testing
     add_subdirectory(test)
     enable_testing()
-    add_test(NAME DBM_test   COMMAND DBM_test)
-    add_test(NAME bound_test COMMAND bound_test)
+    add_test(NAME DBM_test            COMMAND DBM_test)
+    add_test(NAME bounds_table_test   COMMAND bounds_table_test)
+    add_test(NAME bound_test          COMMAND bound_test)
 endif()
