--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,19 @@
 set(HEADER_FILES
-        dbm/DBM.h
-        dbm/bounds_table_t.h
-        dbm/bound_t.h)
+        dbm2/DBM.h
+        dbm2/bounds_table_t.h
+        dbm2/bound_t.h
+        dbm2/Federation.h)
 
-add_library(dbm
+add_library(dbm2
         ${HEADER_FILES}
-        dbm/DBM.cpp
-        dbm/bounds_table_t.cpp
-        dbm/bound_t.cpp)
+        dbm2/DBM.cpp
+        dbm2/bounds_table_t.cpp
+        dbm2/bound_t.cpp
+        dbm2/Federation.cpp)
 
-target_include_directories (dbm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (dbm2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-install(TARGETS dbm
+install(TARGETS dbm2
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
