remove unimplemented file mentions from cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,13 @@
 set(HEADER_FILES
         dbm2/DBM.h
         dbm2/bounds_table_t.h
-        dbm2/bound_t.h
-        dbm2/Federation.h)
+        dbm2/bound_t.h)
 
 add_library(dbm2
         ${HEADER_FILES}
         dbm2/DBM.cpp
         dbm2/bounds_table_t.cpp
-        dbm2/bound_t.cpp
-        dbm2/Federation.cpp)
+        dbm2/bound_t.cpp)
 
 target_include_directories (dbm2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
