--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,7 @@ add_executable(bound_test bound_test.cpp)
 target_link_libraries(DBM_test ${Boost_LIBRARIES} dbm2)
 target_link_libraries(bounds_table_test ${Boost_LIBRARIES} dbm2)
 target_link_libraries(bound_test ${Boost_LIBRARIES} dbm2)
+
+add_test(NAME DBM_test            COMMAND DBM_test)
+add_test(NAME bounds_table_test   COMMAND bounds_table_test)
+add_test(NAME bound_test          COMMAND bound_test)
