removed w/o python flag

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install depends
         run: |
           brew install cmake
-          brew install --without-python boost
+          brew install boost
 
       - name: Test
         run: |
