--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,12 +21,20 @@ jobs:
       - name: Install Packages
         run: |
           sudo apt-get update
-          sudo apt-get install libboost-all-dev
-      - name: Test
+      - name: Prebuild
+        run: |
+          mkdir -p build
+          cd build
+          CC=gcc-10 CXX=g++-10 cmake ../ -DCMAKE_BUILD_TYPE=Prebuild -DDBM_BuildTests=ON -DBUILD_TESTING=ON  ..
+          make
+      - name: Build
         run: |
           mkdir -p build
           cd build
           CC=gcc-10 CXX=g++-10 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DDBM_BuildTests=ON -DBUILD_TESTING=ON  ..
           make
+      - name: Test
+        run: |
+          cd build
           make test
 
