--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,15 +29,22 @@ if (DBM_GetDependencies)
 
     file(MAKE_DIRECTORY ${EXTERNAL_INSTALL_LOCATION}/include)
     file(MAKE_DIRECTORY ${EXTERNAL_INSTALL_LOCATION}/lib)
-    if (UNIX AND NOT APPLE)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        set(BOOST_CONFIG_JAM "using clang : : ${CMAKE_CXX_COMPILER}")
+        set(BOOST_B2_OPTS "")
+        set(BOOST_TOOLSET "clang")
+    elseif (UNIX AND NOT APPLE)
         set(BOOST_CONFIG_JAM "using gcc : : ${CMAKE_CXX_COMPILER}")
         set(BOOST_B2_OPTS "")
+        set(BOOST_TOOLSET "gcc")
     elseif (APPLE)
         set(BOOST_CONFIG_JAM "using gcc : : ${CMAKE_CXX_COMPILER}")
         set(BOOST_B2_OPTS "")
+        set(BOOST_TOOLSET "gcc")
     else ()
         set(BOOST_CONFIG_JAM "using gcc : : ${CMAKE_CXX_COMPILER}")
         set(BOOST_B2_OPTS target-os=windows binary-format=pe abi=ms threading=multi threadapi=win32)
+        set(BOOST_TOOLSET "gcc")
     endif ()
 
     if (ARCH_TYPE MATCHES "win64")
@@ -50,7 +57,7 @@ if (DBM_GetDependencies)
             URL https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.zip
             URL_HASH SHA256=f22143b5528e081123c3c5ed437e92f648fe69748e95fa6e2bd41484e2986cc3
             PATCH_COMMAND echo "${BOOST_CONFIG_JAM}" $<SEMICOLON>  > config.jam
-            CONFIGURE_COMMAND ./bootstrap.sh --prefix=${CMAKE_BINARY_DIR}/external cxxflags="-arch x86_64" --without-icu
+            CONFIGURE_COMMAND ./bootstrap.sh --with-toolset=${BOOST_TOOLSET} --prefix=${CMAKE_BINARY_DIR}/external cxxflags="-arch x86_64" --without-icu
             BUILD_COMMAND ./b2 --user-config=config.jam --prefix=${CMAKE_BINARY_DIR}/external --with-test cxxstd=17 cflags="-fPIC" cxxflags="-fPIC" address-model=64 ${BOOST_B2_OPTS} variant=release link=shared runtime-link=shared install
             BUILD_IN_SOURCE 1
             INSTALL_COMMAND ""
