unique clang name

--- a/.github/workflows/build-linux-clang.yml
+++ b/.github/workflows/build-linux-clang.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 concurrency: 
-  group: build-Linux-${{ github.head_ref }}
+  group: build-Linux-Clang-${{ github.head_ref }}
   cancel-in-progress: true
 
 jobs:
