--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -20,18 +20,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install depends
         run: |
-          brew install cmake
-      - name: Prebuild
-        run: |
-          mkdir -p build
-          cd build
-          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Prebuild -DDBM_BuildTests=ON -DBUILD_TESTING=ON  ..
-          make
+          brew install cmake boost
       - name: Build
         run: |
           mkdir -p build
           cd build
-          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Debug -DDBM_BuildTests=ON -DBUILD_TESTING=ON  ..
+          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Debug -DDBM_BuildTests=ON -DBUILD_TESTING=ON -DDBM_GetDependencies=OFF ..
           make
       - name: Test
         run: |
