include directory /include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if (DBM_GetDependencies)
     link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
 endif (DBM_GetDependencies)
 if(NOT CMAKE_BUILD_TYPE MATCHES Prebuild)
+    include_directories(include)
     add_subdirectory(src)
 endif()
 if(BUILD_TESTING AND DBM_BuildTests)
