--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -20,12 +20,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install depends
         run: |
-          brew install cmake boost
+          CC=gcc-11 CXX=g++-11 brew install cmake boost
       - name: Build
         run: |
           mkdir -p build
           cd build
-          CC=gcc-11 CXX=g++-11 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DDBM_BuildTests=ON -DBUILD_TESTING=ON -DPARDIBAAL_GetDependencies=OFF ..
+          CC=gcc-11 CXX=g++-11 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DPARDIBAAL_GetDependencies=OFF ..
           CC=gcc-11 CXX=g++-11 make
       - name: Test
         run: |
