build boost with gcc on mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,9 @@ if (PARDIBAAL_GetDependencies)
         set(BOOST_B2_OPTS "")
         set(BOOST_TOOLSET "gcc")
     elseif (APPLE)
-        set(BOOST_CONFIG_JAM "using clang : : ${CMAKE_CXX_COMPILER}")
+        set(BOOST_CONFIG_JAM "using gcc : : ${CMAKE_CXX_COMPILER}")
         set(BOOST_B2_OPTS "")
-        set(BOOST_TOOLSET "clang")
+        set(BOOST_TOOLSET "gcc")
     else ()
         set(BOOST_CONFIG_JAM "using gcc : : ${CMAKE_CXX_COMPILER}")
         set(BOOST_B2_OPTS target-os=windows binary-format=pe abi=ms threading=multi threadapi=win32)
