--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          CC=gcc-11 CXX=g++-11 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DPARDIBAAL_GetDependencies=OFF ..
+          CC=gcc-11 CXX=g++-11 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON ..
           CC=gcc-11 CXX=g++-11 make
       - name: Test
         run: |
