--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -20,15 +20,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install depends
         run: |
-          CC=gcc-11 CXX=g++-11 brew install cmake boost
+          brew install cmake boost
       - name: Build
         run: |
           mkdir -p build
           cd build
-          CC=gcc-11 CXX=g++-11 cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON ..
-          CC=gcc-11 CXX=g++-11 make
+          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON ..
+          make
       - name: Test
         run: |
           cd build
-          CC=gcc-11 CXX=g++-11 make test
+          make test
 
