--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(HEADER_FILES
+        pardibaal/Federation.h
         pardibaal/DBM.h
         pardibaal/bounds_table_t.h
         pardibaal/bound_t.h)
 
 add_library(pardibaal
         ${HEADER_FILES}
+        pardibaal/Federation.cpp
         pardibaal/DBM.cpp
         pardibaal/bounds_table_t.cpp
         pardibaal/bound_t.cpp)
