--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,16 +10,16 @@ add_executable(Federation_test       Federation_test.cpp)
 add_executable(DBM_test              DBM_test.cpp)
 add_executable(bounds_table_test     bounds_table_test.cpp)
 add_executable(bound_test            bound_test.cpp)
-add_executable(clock_constraint_test clock_constraint_test.cpp)
+add_executable(difference_bound_test difference_bound_test.cpp)
 
 target_link_libraries(Federation_test       ${Boost_LIBRARIES} pardibaal)
 target_link_libraries(DBM_test              ${Boost_LIBRARIES} pardibaal)
 target_link_libraries(bounds_table_test     ${Boost_LIBRARIES} pardibaal)
 target_link_libraries(bound_test            ${Boost_LIBRARIES} pardibaal)
-target_link_libraries(clock_constraint_test ${Boost_LIBRARIES} pardibaal)
+target_link_libraries(difference_bound_test ${Boost_LIBRARIES} pardibaal)
 
 add_test(NAME Federation_test       COMMAND Federation_test)
 add_test(NAME DBM_test              COMMAND DBM_test)
 add_test(NAME bounds_table_test     COMMAND bounds_table_test)
 add_test(NAME bound_test            COMMAND bound_test)
-add_test(NAME clock_constraint_test COMMAND clock_constraint_test)
+add_test(NAME difference_bound_test COMMAND difference_bound_test)
