--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DPARDIBAAL_GetDependencies=OFF ..
+          CC=clang CXX=clang++ cmake ../ -DCMAKE_BUILD_TYPE=Debug -DPARDIBAAL_BuildTests=ON -DPARDIBAAL_GetDependencies=OFF ..
           make
       - name: Test
         run: |
